--- a/open.caesar.oml2.parent/build.gradle
+++ b/open.caesar.oml2.parent/build.gradle
@@ -21,7 +21,7 @@ subprojects {
 	apply plugin: 'idea'
 	
 	group = 'open.caesar.oml2'
-	version = '1.0.0-SNAPSHOT'
+	version = '0.1.0'
 	
 	sourceCompatibility = '1.8'
 	targetCompatibility = '1.8'
