--- a/open.caesar.oml2.parent/open.caesar.oml2.ide/build.gradle
+++ b/open.caesar.oml2.parent/open.caesar.oml2.ide/build.gradle
@@ -19,5 +19,7 @@ shadowJar {
 		'.options', '.api_description', '*.profile', '*.html', 'about.*', 'about_files/*',
 		'plugin.xml', 'modeling32.png', 'systembundle.properties', 'profile.list')
 	classifier = 'ls'
+	baseName = 'oml2-language-server'
+	classifier = null
 	append('plugin.properties')
 }
