--- a/open.caesar.oml2.parent/open.caesar.oml2.ide/build.gradle
+++ b/open.caesar.oml2.parent/open.caesar.oml2.ide/build.gradle
@@ -18,8 +18,10 @@ shadowJar {
 	exclude('META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA','schema/*',
 		'.options', '.api_description', '*.profile', '*.html', 'about.*', 'about_files/*',
 		'plugin.xml', 'modeling32.png', 'systembundle.properties', 'profile.list')
-	classifier = 'ls'
+	append('plugin.properties')
 	baseName = 'oml2-language-server'
 	classifier = null
-	append('plugin.properties')
 }
+
+shadowDistZip.classifier = 'shadow'
+shadowDistTar.classifier = 'shadow'
