Switch the projects to gradle layout

--- a/open.caesar.oml2.parent/open.caesar.oml2.model/.project
+++ b/open.caesar.oml2.parent/open.caesar.oml2.model/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>open.caesar.oml2.model</name>
-	<comment>Project org.xtext.example.mydsl.model created by Buildship.</comment>
+	<comment>Project open.caesar.oml2.model created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
