--- a/open.caesar.oml2.parent/open.caesar.oml2.model/build.properties
+++ b/open.caesar.oml2.parent/open.caesar.oml2.model/build.properties
@@ -4,5 +4,5 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = src,\
-           build/xcore/main/
+source.. = src/
+output.. = bin/
