--- a/io.opencaesar.oml.parent/gradle/maven-deployment.gradle
+++ b/io.opencaesar.oml.parent/gradle/maven-deployment.gradle
@@ -63,8 +63,8 @@ publishing {
 }
 
 bintray {
-	user = System.getProperty('bintray.user')
-	key = System.getProperty('bintray.key')
+	user = System.getenv('BINTRAY_USER')
+	key = System.getenv('BINTRAY_API_KEY')
 	publications = ['mavenPublication']
 
 	pkg {
