--- a/io.opencaesar.oml.parent/build.gradle
+++ b/io.opencaesar.oml.parent/build.gradle
@@ -16,15 +16,18 @@ subprojects {
 	
 	ext.versions = [
 	    xtext: '2.16.0',
+	    xcore: '1.3.1',
+	    xcoreLib: '1.1.100',
+	    ecoreXtext: '1.2.0',
+	    codegen: '2.11.0',
+	    codegenEcore: '2.11.0',
 	    mwe2: '2.9.0.201605261059',
-	    lsp4j: '0.5.0',
-	    sprotty: '0.4.0',
+	    lsp4j: '0.7.0',
 	    elk: '0.3.0',
-	    gson: '2.7',
-	    junit: '4.12',
-	    antlrgen: '[2.1.1,3)',
-	    jflexgen: '0.1.0',
-	    xerces:'2.11.0'
+	    sprotty: '0.4.0',
+	    junitJupiter: '5.1.0',
+	    gson: '2.8.2',
+	    guava: '21.0'
 	]
 
 	repositories {
@@ -34,19 +37,11 @@ subprojects {
 	}
 	
 	apply plugin: 'com.jfrog.bintray'
-	apply plugin: 'java'
 	apply plugin: 'org.xtext.xtend'
 	apply plugin: 'eclipse'
 	apply plugin: 'idea'
 	
 	apply from: "${rootDir}/gradle/source-layout.gradle"
 	apply from: "${rootDir}/gradle/maven-deployment.gradle"
-	
-	sourceCompatibility = '1.8'
-	targetCompatibility = '1.8'
-	
-	configurations.all {
-		exclude group: 'asm'
-	}
 }
 
