--- a/io.opencaesar.oml.parent/gradle/source-layout.gradle
+++ b/io.opencaesar.oml.parent/gradle/source-layout.gradle
@@ -1,12 +1,15 @@
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
 sourceSets {
 	main {
 		java.srcDirs = ['src/main/java', 'src/main/xtext-gen']
-		resources.srcDirs = ['src/main/resources', 'src/main/xtext-gen']
+		resources.srcDirs = ['src/main/resources']
 		xtendOutputDir = 'src/main/xtend-gen'
 	}
 	test {
 		java.srcDirs = ['src/test/java', 'src/test/xtext-gen']
-		resources.srcDirs = ['src/test/resources', 'src/test/xtext-gen']
+		resources.srcDirs = ['src/test/resources']
 		xtendOutputDir = 'src/test/xtend-gen'
 	}
 }
@@ -27,13 +30,13 @@ jar {
 	}
 }
 
-plugins.withId('war') {
-	webAppDirName = "src/main/webapp"
-}
-
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
 }
 
 javadoc.failOnError = false
@@ -45,6 +48,5 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 artifacts {
-    archives sourcesJar
     archives javadocJar
 }
