--- a/io.opencaesar.oml.parent/io.opencaesar.oml/build.gradle
+++ b/io.opencaesar.oml.parent/io.opencaesar.oml/build.gradle
@@ -1,25 +1,27 @@
 ext.title = 'Oml API'
 description = 'Ecore-based API for Oml'
 
-dependencies {
-	compile "org.eclipse.xtext:org.eclipse.xtext.xbase:${versions.xtext}"
-	compile 'org.eclipse.emf:org.eclipse.emf.ecore.xcore.lib:1.1.+'
-	
-	xtextLanguages "org.eclipse.emf:org.eclipse.emf.mwe2.runtime:${versions.mwe2}"
-	xtextLanguages 'org.eclipse.emf:org.eclipse.emf.ecore.xcore:1.3.+'
-	xtextLanguages 'org.eclipse.emf:org.eclipse.emf.ecore.xcore.lib:1.1.+'
-	xtextLanguages 'org.eclipse.emf:org.eclipse.emf.codegen:+'
-	xtextLanguages 'org.eclipse.emf:org.eclipse.emf.codegen.ecore:2.11.+'
-	xtextLanguages 'org.eclipse.emf:org.eclipse.emf.codegen.ecore.xtext:1.2.+'
-	xtextLanguages "org.eclipse.xtext:org.eclipse.xtext.ecore:${versions.xtext}"
-}
-
 sourceSets {
 	main {
 		java {
 			exclude '**/*.xcore'
 		}
 	}
+}
+
+dependencies {
+	compile "org.eclipse.xtext:org.eclipse.xtext.xbase:${versions.xtext}"
+	compile "org.eclipse.emf:org.eclipse.emf.ecore.xcore.lib:${versions.xcoreLib}"
+}
+
+dependencies {	
+	xtextLanguages "org.eclipse.xtext:org.eclipse.xtext.ecore:${versions.xtext}"
+	xtextLanguages "org.eclipse.emf:org.eclipse.emf.mwe2.runtime:${versions.mwe2}"
+	xtextLanguages "org.eclipse.emf:org.eclipse.emf.ecore.xcore:${versions.xcore}"
+	xtextLanguages "org.eclipse.emf:org.eclipse.emf.ecore.xcore.lib:${versions.xcoreLib}"
+	xtextLanguages "org.eclipse.emf:org.eclipse.emf.codegen:${versions.codegen}"
+	xtextLanguages "org.eclipse.emf:org.eclipse.emf.codegen.ecore:${versions.codegenEcore}"
+	xtextLanguages "org.eclipse.emf:org.eclipse.emf.codegen.ecore.xtext:${versions.ecoreXtext}"
 }
 
 xtext {
