--- a/io.opencaesar.oml.parent/gradle/source-layout.gradle
+++ b/io.opencaesar.oml.parent/gradle/source-layout.gradle
@@ -3,13 +3,13 @@ targetCompatibility = '1.8'
 
 sourceSets {
 	main {
-		java.srcDirs = ['src/main/java', 'src/main/xtext-gen']
-		resources.srcDirs = ['src/main/resources']
+		java.srcDirs = ['src/main/java', 'src/main/xtext-gen', 'build/xcore/main']
+		resources.srcDirs = ['src/main/resources', 'src/main/xtext-gen']
 		xtendOutputDir = 'src/main/xtend-gen'
 	}
 	test {
 		java.srcDirs = ['src/test/java', 'src/test/xtext-gen']
-		resources.srcDirs = ['src/test/resources']
+		resources.srcDirs = ['src/test/resources', 'src/test/xtext-gen']
 		xtendOutputDir = 'src/test/xtend-gen'
 	}
 }
