--- a/io.opencaesar.oml.parent/io.opencaesar.oml.dsl.ide/.settings/org.eclipse.jdt.core.prefs
+++ b/io.opencaesar.oml.parent/io.opencaesar.oml.dsl.ide/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,9 @@
+#
+#Mon Jul 08 09:48:20 PDT 2019
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
-org.eclipse.jdt.core.compiler.compliance=1.8
-org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
-org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.source=1.8
+org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.compliance=1.8
