--- a/io.opencaesar.oml.parent/io.opencaesar.oml.dsl.ide/build.gradle
+++ b/io.opencaesar.oml.parent/io.opencaesar.oml.dsl.ide/build.gradle
@@ -1,3 +1,5 @@
+plugins {id 'com.github.johnrengelman.shadow' version '2.0.0'}
+
 ext.title = 'Oml Language Server'
 description = 'Generic IDE services for Oml offered via the Language Server Protocol'
 
@@ -6,4 +8,31 @@ dependencies {
 	compile "org.eclipse.xtext:org.eclipse.xtext.ide:${versions.xtext}"
 	compile "org.eclipse.xtext:org.eclipse.xtext.xbase.ide:${versions.xtext}"
 	compile 'com.google.guava:guava:${versions.guava}'
+
+	compile "org.eclipse.lsp4j:org.eclipse.lsp4j:${versions.lsp4j}"
+	compile "org.eclipse.elk:org.eclipse.elk.alg.layered:${versions.elk}"
+	compile "org.eclipse.sprotty:org.eclipse.sprotty.server:${versions.sprotty}"
+	compile "org.eclipse.sprotty:org.eclipse.sprotty.layout:${versions.sprotty}"
+	compile "org.eclipse.sprotty:org.eclipse.sprotty.xtext:${versions.sprotty}"
+	compile "org.eclipse.xtext:org.eclipse.xtext:${versions.xtext}"
+	compile "org.eclipse.xtext:org.eclipse.xtext.xbase:${versions.xtext}"		
 }
+
+apply plugin: 'application'
+mainClassName = "io.opencaesar.oml.dsl.ide.launch.OmlServerLauncher"
+
+apply plugin: 'com.github.johnrengelman.shadow'
+
+shadowJar {
+	from(project.convention.getPlugin(JavaPluginConvention).sourceSets.main.output)
+	configurations = [project.configurations.runtime]
+	exclude('META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA','schema/*',
+		'.options', '.api_description', '*.profile', '*.html', 'about.*', 'about_files/*',
+		'plugin.xml', 'modeling32.png', 'systembundle.properties', 'profile.list')
+	append('plugin.properties')
+	baseName = 'oml-language-server'
+	classifier = null
+}
+
+shadowDistZip.classifier = 'shadow'
+shadowDistTar.classifier = 'shadow'
